--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension GitLab::API::v3.
 
 {{$NEXT}}
 
+ - Fix double-slashes in URL paths.
+
 1.02 2017-12-09
 
  - Deprecated.
